@@ -1,13 +1,17 @@
-import { ActionRow, TextStyles } from '@discordeno/bot';
+import { ActionRow, ButtonStyles, TextStyles } from '@discordeno/bot';
 import ComponentInteractionContext from '../../structures/command/ComponentInteractionContext.js';
 import { ModalInteraction, SelectMenuInteraction } from '../../types/interaction.js';
-import ChatInputInteractionContext from '../../structures/command/ChatInputInteractionContext.js';
-import { createEmbed, hexStringToNumber } from '../../utils/discord/embedUtils.js';
-import { Plants } from '../fazendinha/constants.js';
+import { hexStringToNumber } from '../../utils/discord/embedUtils.js';
+import { PLANT_CATEGORY_EMOJIS, Plants } from '../fazendinha/constants.js';
 import {
   createActionRow,
+  createButton,
+  createContainer,
   createCustomId,
+  createSection,
   createSelectMenu,
+  createSeparator,
+  createTextDisplay,
   createTextInput,
 } from '../../utils/discord/componentUtils.js';
 import { QuantitativeSeed } from '../../types/database.js';
@@ -19,23 +23,37 @@ import { postTransaction } from '../../utils/apiRequests/statistics.js';
 import { bot } from '../../index.js';
 import { ApiTransactionReason } from '../../types/api.js';
 import commandRepository from '../../database/repositories/commandRepository.js';
-import { getSiloLimits } from '../fazendinha/siloUtils.js';
+import { getSiloLimits, isMatePlant } from '../fazendinha/siloUtils.js';
 import { MessageFlags } from '@discordeno/bot';
-import { AvailablePlants } from '../fazendinha/types.js';
 import { SeasonEmojis } from '../fazendinha/displayPlantations.js';
+import { PlantCategories } from '../fazendinha/types.js';
+import { InteractionContext } from '../../types/menhera.js';
 
 const handleBuySeedsInteractions = async (ctx: ComponentInteractionContext): Promise<void> => {
-  const [option] = ctx.sentData;
+  const [option, embedColor] = ctx.sentData;
+
+  if (option === 'EXIT_SHOP') {
+    await ctx.ack();
+    return ctx.deleteMessage();
+  }
 
   if (option === 'SHOW_MODAL')
-    return showModal(ctx as ComponentInteractionContext<SelectMenuInteraction>);
+    return showModal(ctx as ComponentInteractionContext<SelectMenuInteraction>, embedColor);
 
   if (option === 'BUY')
-    return parseModalSumbit(ctx as ComponentInteractionContext<ModalInteraction>);
+    return parseModalSumbit(ctx as ComponentInteractionContext<ModalInteraction>, embedColor);
+
+  if (option === 'CHANGE_CATEGORY') {
+    const selectedCategory = (ctx as ComponentInteractionContext<SelectMenuInteraction>).interaction
+      .data.values[0];
+
+    return buySeeds(ctx, Number(selectedCategory), embedColor);
+  }
 };
 
 const parseModalSumbit = async (
   ctx: ComponentInteractionContext<ModalInteraction>,
+  embedColor: string,
 ): Promise<void> => {
   const selectedPlants: QuantitativeSeed[] = extractFields(ctx.interaction).map((a) => ({
     amount: parseInt(a.value, 10),
@@ -50,9 +68,8 @@ const parseModalSumbit = async (
     const plant = selectedPlants[i];
 
     if (Number.isNaN(plant.amount) || plant.amount <= 0)
-      return ctx.makeMessage({
-        components: [],
-        embeds: [],
+      return ctx.respondInteraction({
+        flags: MessageFlags.Ephemeral,
         content: ctx.prettyResponse('error', 'commands:loja.buy_seeds.invalid-amount'),
       });
 
@@ -77,30 +94,31 @@ const parseModalSumbit = async (
   const userData = await userRepository.ensureFindUser(ctx.user.id);
 
   if (totalPrice > userData.estrelinhas)
-    return ctx.makeMessage({
-      components: [],
-      embeds: [],
+    return ctx.respondInteraction({
+      flags: MessageFlags.Ephemeral,
       content: ctx.prettyResponse('error', 'commands:loja.buy_seeds.not-enough-stars', {
         amount: totalPrice,
       }),
     });
 
-  await starsRepository.removeStars(ctx.user.id, totalPrice);
-  await farmerRepository.updateSeeds(ctx.user.id, farmer.seeds);
+  await Promise.all([
+    starsRepository.removeStars(ctx.user.id, totalPrice),
+    farmerRepository.updateSeeds(ctx.user.id, farmer.seeds),
+    postTransaction(
+      `${ctx.user.id}`,
+      `${bot.id}`,
+      totalPrice,
+      'estrelinhas',
+      ApiTransactionReason.BUY_SEED,
+    ),
+  ]);
 
-  postTransaction(
-    `${ctx.user.id}`,
-    `${bot.id}`,
-    totalPrice,
-    'estrelinhas',
-    ApiTransactionReason.BUY_SEED,
-  );
+  await buySeeds(ctx, PlantCategories.Grain, embedColor);
 
   const commandInfo = await commandRepository.getCommandInfo('fazendinha');
 
-  ctx.makeMessage({
-    components: [],
-    embeds: [],
+  return ctx.followUp({
+    flags: MessageFlags.Ephemeral,
     content: ctx.prettyResponse('success', 'commands:loja.buy_seeds.success', {
       amount: totalPrice,
       command: `</fazendinha plantações:${commandInfo?.discordId}>`,
@@ -111,9 +129,9 @@ const parseModalSumbit = async (
 
 const showModal = async (
   ctx: ComponentInteractionContext<SelectMenuInteraction>,
+  embedColor: string,
 ): Promise<void> => {
   const selectedOptions = ctx.interaction.data.values;
-  const [, embedColor] = ctx.sentData;
 
   const modalFields = selectedOptions.reduce<ActionRow[]>((fields, plant) => {
     fields.push(
@@ -143,57 +161,97 @@ const showModal = async (
 };
 
 const buySeeds = async (
-  ctx: ChatInputInteractionContext,
-  finishCommand: () => void,
+  ctx: InteractionContext,
+  currentCategory: PlantCategories,
+  embedColor: string,
 ): Promise<void> => {
-  finishCommand();
   const selectMenu = createSelectMenu({
-    customId: createCustomId(
-      4,
-      ctx.user.id,
-      ctx.originalInteractionId,
-      'SHOW_MODAL',
-      ctx.authorData.selectedColor,
-    ),
+    customId: createCustomId(4, ctx.user.id, ctx.originalInteractionId, 'SHOW_MODAL', embedColor),
     options: [],
     minValues: 1,
     placeholder: ctx.locale('commands:loja.buy_seeds.select'),
   });
 
-  const embed = createEmbed({
-    title: ctx.locale('commands:loja.buy_seeds.embed-title'),
-    color: hexStringToNumber(ctx.authorData.selectedColor),
-    fields: Object.entries(Plants)
-      .filter((a) => a[0] !== `${AvailablePlants.Mate}`)
-      .map(([plant, data]) => {
-        selectMenu.options.push({
-          label: ctx.locale(`commands:loja.buy_seeds.seed`, {
-            plant: ctx.locale(`data:plants.${plant as '1'}`),
-          }),
-          emoji: { name: Plants[plant as '1'].emoji },
-          value: plant,
-        });
+  const categorySelectMenu = createSelectMenu({
+    customId: createCustomId(
+      4,
+      ctx.user.id,
+      ctx.originalInteractionId,
+      'CHANGE_CATEGORY',
+      embedColor,
+    ),
+    options: Object.entries(PlantCategories).flatMap(([id]) => {
+      const numberId = Number(id);
+      if (Number.isNaN(numberId)) return [];
 
-        return {
-          name: `${Plants[plant as '1'].emoji} ${ctx.locale(`data:plants.${plant as '1'}`)} [${ctx.locale(`data:fazendinha.category_${data.category}`)}]`,
-          inline: true,
-          value: ctx.locale('commands:loja.buy_seeds.plant-stats', {
-            sellValue: data.sellValue,
-            buyValue: data.buyValue,
-            harvestTime: data.minutesToHarvest,
-            rotTime: data.minutesToRot,
-            bestSeason: SeasonEmojis[data.bestSeason],
-            worstSeason: SeasonEmojis[data.worstSeason],
-          }),
-        };
+      return [
+        {
+          label: ctx.locale(`data:fazendinha.category_${numberId as 1}`),
+          value: id,
+          default: numberId === currentCategory,
+          emoji: { name: PLANT_CATEGORY_EMOJIS[id as '1'] },
+        },
+      ];
+    }),
+    minValues: 1,
+    maxValues: 1,
+    required: true,
+  });
+
+  const container = createContainer({
+    accentColor: hexStringToNumber(embedColor),
+    components: [
+      createSection({
+        components: [
+          createTextDisplay(`## ${ctx.locale('commands:loja.buy_seeds.embed-title')}`),
+          createTextDisplay(ctx.locale('commands:loja.buy_seeds.select-category')),
+        ],
+        accessory: createButton({
+          style: ButtonStyles.Secondary,
+          label: 'Fechar',
+          customId: createCustomId(4, ctx.user.id, ctx.originalInteractionId, 'EXIT_SHOP'),
+        }),
       }),
+      createActionRow([categorySelectMenu]),
+    ],
+  });
+
+  Object.entries(Plants).forEach(([plant, data]) => {
+    if (isMatePlant(Number(plant))) return;
+
+    selectMenu.options.push({
+      label: ctx.locale(`commands:loja.buy_seeds.seed`, {
+        plant: ctx.locale(`data:plants.${plant as '1'}`),
+      }),
+      emoji: { name: Plants[plant as '1'].emoji },
+      value: plant,
+    });
+
+    if (data.category !== currentCategory) return;
+
+    container.components.push(
+      createSeparator(),
+      createTextDisplay(
+        `### ${Plants[plant as '1'].emoji} ${ctx.locale(`data:plants.${plant as '1'}`)} [${ctx.locale(
+          `data:fazendinha.category_${data.category}`,
+        )}]\n${ctx.locale('commands:loja.buy_seeds.plant-stats', {
+          sellValue: data.sellValue,
+          buyValue: data.buyValue,
+          harvestTime: data.minutesToHarvest,
+          rotTime: data.minutesToRot,
+          bestSeason: SeasonEmojis[data.bestSeason],
+          worstSeason: SeasonEmojis[data.worstSeason],
+        })}`,
+      ),
+    );
   });
 
   selectMenu.maxValues = selectMenu.options.length > 5 ? 5 : selectMenu.options.length;
 
-  ctx.makeMessage({
-    embeds: [embed],
-    components: [createActionRow([selectMenu])],
+  container.components.push(createSeparator(true), createActionRow([selectMenu]));
+
+  ctx.makeLayoutMessage({
+    components: [container],
   });
 };
 
